feat: user onboarding options
- users can onboard onto the application through two options 1.
uploading a document, 2. entering data in the form
